feat: add validations and profiles local and docker

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Para execução no Docker
-# SPRING_DATASOURCE_URL=jdbc:sqlserver://sqlserver:1433;databaseName=community_center_db
+SPRING_DATASOURCE_URL_DOCKER=jdbc:sqlserver://sqlserver:1433;databaseName=community_center_db
 
 # Para execução local
 SPRING_DATASOURCE_URL=jdbc:sqlserver://localhost:1433;databaseName=community_center_db
