--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - sqlserver
     env_file:
       - .env
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
       
   sqlserver:
     build:
