--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>9.0.0.Beta3</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>io.github.cdimascio</groupId>
 			<artifactId>dotenv-java</artifactId>
 			<version>3.0.2</version>
